# rcs_cuda_sim

./: .clang-format  .clangd  .clangd2  .gitignore  CMakeLists.txt  README.md  statistic.py  todo_list.md
cmake/: Config.cmake.in  setup_compilers.cmake
component/: CMakeLists.txt  edge_extractor.cpp  mapgen_gridmap_test.cpp  mapgen_postproc_test.cpp  mapgen_test.cpp  rasterizer.cu
component/map_generator/: main.cpp  map_generator.cpp  map_generator.h
component/mapgen/: mapgen_generate.cpp  mapgen_postprocess.cpp  mapgen_postprocess.h
component/scene_generate/: main  main.cpp  map_generator.cpp  map_generator.h
core/: CMakeLists.txt
core/include/: component.h  execuate.h  tree.h
core/include/storage/: GTensor.h  GTensorBase.h  GTensorTorchWrapper.h  ITensor.h  TensorMeta.h  TensorRegistry.h  TensorRegistryManager.h
core/src/: lidar.cu  main.cpp  tree.cpp
core/src/storage/: GTensorBase.cpp  GTensorTorchWrapper.cpp  TensorRegistry.cpp  TensorRegistryManager.cpp
core/tests/: CMakeLists.txt
core/tests/storage/: GTensorBasicTest.cpp  GTensorDeviceTest.cpp  GTensorMathTest.cpp  GTensorThrustTest.cu  GTensorTypeSafetyTest.cpp
include/: component.h  cuda_helper.h  storage.h
include/component/: LidarSensor.cu  LidarSensor.cuh  LidarSensor.hh  MapGenerator.hh  MincoTrajMover.hh  RobotEntry.cuh  RobotEntry.hh  TrajPlanner.hh
include/component/map_generator/: MapGenerator.cuh  mapgen_generate.hh  mapgen_postprocess.hh
include/component/traj_planner/: MincoTrajFactory.cpp  MincoTrajFactory.h  TrajPlanner.cu
include/core/: Component.hh  EnvGroupManager.cuh  EnvGroupManager.hh  EnvironGroupConfigItem.hh  EnvironGroupManager.cuh  ExecuteNode.hh  MessageBus.hh  MessageQueue.hh  MessageShape.hh  ReducerComponent.hh  ReducerNode.hh  SimulatorContext.hh  component.hpp  config.h  console_style.h  context.hpp  core_types.hh  types.hpp
include/core/geometry/: GeometryManager.cu  GeometryManager.cuh  GridMapGenerator.hh  shapes.hh  shapes.hpp  transform.hh  transform.hpp  types.hh  types.hpp  world.hpp
include/core/storage/: GTensor.h  GTensor.hh  GTensorConfig.hh  GTensorTorchWrapper.h  GTensorTorchWrapper.hh  ITensor.h  ITensor.hh  Scalar.hh  TensorRegistry.h  TensorRegistry.hh  TensorRegistryManager.h  TensorRegistryManager.hh
include/environ_group/: config.hpp  context.hpp  manager.hpp
include/geometry/: GeometryManager.cuh  GridMapGenerator.hh  geometry_types.hh  shapes.hh  transform.hh  types.hh  world.hh
include/messaging/: bus.hpp  publisher.hpp  subscriber.hpp
include/messaging/impl/: message_bus.hpp
include/storage/: GTensor.h  GTensorTorchWrapper.h  ITensor.h  TensorRegistry.h  TensorRegistryManager.h
pseudo/: main.py  mytree.py  path_plan.py  test.ipynb  test_tree.py
pseudo/frameworks/: common_types.py  components.py  environ_group.py  lidar_com.py  mesage_handler.py  message_bus.py  message_bus_base.py  reducer_com.py  world.py
pseudo/frameworks/environ_group/: environ_config.py  environ_context.py  environ_group_interface.py
python/: cudasim_pycore.pyi  test.py
src/: bgl.puml  test_boost_graph.cpp  test_component.cc  test_core.cc  test_core.cu  test_geometry_mgr.cu  test_lidar.cu  test_mapgen.cu  test_mover.cu
src/component/: LidarSensor.cu  RobotEntry.cu
src/component/map_generator/: MapGenerator.cu  mapgen_generate.hh
src/component/mapgen/: mapgen_component.cu  mapgen_generate.h  mapgen_generate.hh  mapgen_postprocess.cpp  mapgen_postprocess.h  mapgen_postprocess.hh
src/component/minco_traj_mover/: MincoTrajFactory.cpp  MincoTrajFactory.h  MincoTrajHelper.hh  MincoTrajMover.cu
src/core/: EnvGroupManager.cu  MessageBus.cc  MessageBus.cu  MessageQueue.cu  ReducerComponent.cc  ReducerComponent.cu  ReducerNode.cc  ReducerNode.cu  SimulatorContext.cc  SimulatorContext.cu
src/core/binding/: python.cc  python.cu
src/core/geometry/: GeometryManager.cu  GridMapGenerator.cc  GridMapGenerator.cu
src/core/storage/: GTensorTorchWrapper.cpp  TensorRegistryManager.cpp
src/storage/: GTensorTorchWrapper.cpp  TensorRegistry.cpp  TensorRegistryManager.cpp
tests/: test_tree.cpp
tests/storage/: GTensorBasicTest.cpp  GTensorDeviceTest.cpp  GTensorMathTest.cpp  GTensorThrustTest.cu  GTensorTypeSafetyTest.cpp
trashbin/component/: CMakeLists.txt  rasterizer.cu
trashbin/pseudo/: dubins_test.py  lidar_raycast.py  minco_traj.py  path_plan.py  raycast2.py  test.ipynb
trashbin/pseudo/frameworks/: common_types.py  component.py  lidar_com.py  reducer_com.py
trashbin/pseudo/frameworks/environ_group/: __init__.py  environ_context.py  environ_group.py
uml/: storage.puml
